<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/main_bg"
    android:layout_height="match_parent">


    <com.zx.zxtvsettings.view.ViewStatusTitleView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px60"
        android:layout_margin="@dimen/px20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/net_setitng_title"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:layout_alignLeft="@+id/setting_custom_rl"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/setting_custom_rl" />

    <RelativeLayout
        android:id="@+id/setting_custom_rl"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@drawable/about_bg">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/setting_custom_wifi"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/wifi_setting"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/sel_focus"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/setting_custom_ethernet"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/ethernet_setting"
                android:background="@drawable/sel_focus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/setting_custom_net_detection"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/net_speed_test"
                android:background="@drawable/sel_focus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />



        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>