<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/wifiactivity_bg"
    >

    <com.zx.zxtvsettings.view.ViewStatusTitleView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px60"
        android:layout_margin="@dimen/px20"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/status_bar"
        android:paddingLeft="@dimen/px150"
        android:paddingRight="@dimen/px150"
        android:paddingTop="@dimen/px50">


        <TextView
            android:id="@+id/wifiseting_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_setting"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:focusable="false"/>

        <Switch
            android:id="@+id/wifi_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/nandb_tittle"
            android:singleLine="true"
            android:textOff="@string/wifi_switch_on"
            android:textOn="@string/wifi_switch_off"
            android:background="@drawable/swtichbutton_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/nandb_tittle"
            android:layout_marginBottom="@dimen/px200"
            android:layout_marginTop="@dimen/px100"
            android:background="@drawable/wifi_listitem_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/px25"
            android:paddingLeft="@dimen/px50"
            android:paddingRight="@dimen/px50">

            <TextView
                android:id="@+id/wifi_statedispaly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />

            <ImageView
                android:id="@+id/wifi_arrowtop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/arrow_top"
                android:visibility="invisible"/>

            <ListView
                android:id="@+id/wandb_wifi_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="10dp"
                android:cacheColorHint="#00000000"
                android:listSelector="#00000000"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/wifi_arrowbottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="140dp"
            android:src="@drawable/arrow_bootom"
            android:visibility="invisible"/>

    </RelativeLayout>

</RelativeLayout>